<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_inicio"
        android:icon="@drawable/ic_nav_home"
        android:title="Início" />
    <item
        android:id="@+id/nav_agenda"
        android:icon="@drawable/ic_nav_agenda"
        android:title="Agenda" />
    <item
        android:id="@+id/nav_financas"
        android:icon="@drawable/ic_nav_financas"
        android:title="Financeiro" />
    <item
        android:id="@+id/nav_perfil"
        android:icon="@drawable/ic_nav_perfil"
        android:title="Perfil" />
</menu>