...
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@android:drawable/ic_menu_edit"
            app:tint="@color/azul_safira" />

        <EditText
            android:id="@+id/inputComando"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="12dp"
            android:background="@null"
            android:hint="Peça ao Organizador..."
            android:textColorHint="#8E8E8E"
            android:textColor="#E3E3E3"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/btnEnviar"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/bg_btn_send"
            android:src="@android:drawable/ic_menu_send"
            android:padding="8dp"
            app:tint="@color/white" />
...
