...
        app:strokeWidth="0dp"
        app:layout_constraintTop_toBottomOf="@id/tituloAgenda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:theme="@style/CalendarioBranco" />
    </com.google.android.material.card.MaterialCardView>

...
